# tlapack

examples/: CMakeLists.txt
examples/geqrtr/: example_geqrtr.cpp
examples/geqrtr_dirty/: CMakeLists.txt  example_geqrtr_dirty.cpp
examples/geqrtt/: CMakeLists.txt  example_geqrtt.cpp  trtr_qr2.hpp  trtr_ung2r.hpp  trtr_unm2r.hpp
examples/least_squares/: CMakeLists.txt
examples/template/: CMakeLists.txt  example_template.cpp
examples/tikhonov_regularization/: example_tikhonov_regularization.cpp
examples/tikhonov_regularization_2/: CMakeLists.txt  example_tikhonov_regularization_2.cpp  init_aug_mtx_vect.hpp  tik_bidiag.hpp  tik_bidiag_elden.hpp  tik_bidiag_qr.hpp  tik_check.hpp  tik_check_naive.hpp  tik_chol.hpp  tik_naive.hpp  tik_qr.hpp  tik_special_bidiag.hpp  tik_svd.hpp
examples/tikhonov_regularization_3/: CMakeLists.txt  example_tikhonov_regularization_3.cpp  tik_check.hpp
include/tlapack/lapack/: template.hpp  tik_bidiag_elden.hpp  trge_qr2.hpp  trge_ung2r.hpp  trge_unm2r.hpp
test/src/: CMakeLists.txt  test_tikhonov.cpp
